--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="상품이미지URL" alt="상품 이미지" class="product-image">
+        <img src="https://i.namu.wiki/i/P1EcAi8FIDtQFmPIbWN3IDQTuvSEM1SY3G3rD0Q1tYnXzpxfu-F1oASm991Vc__HjDVkILJXdDE16F8dEKL3WYCsPQNRrzXyDXh0SQ99FjfKQ48VO2Y78nOsxvzihPuny_x1kZq5eOoRcAm4C8Ev_A.webp" alt="상품 이미지" class="product-image">
         <div class="product-info">
             <h2 class="product-title">상품 이름</h2>
             <p class="product-price">₩ 가격</p>
