--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>상품 페이지</title>
+    <title>카드 형식 상품 페이지</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,6 +15,17 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .product-card {
+            flex-basis: 33.333%;
+            background-color: #f8f8f8;
+            padding: 20px;
+            box-sizing: border-box;
+            border-radius: 5px;
         }
 
         .product-image {
@@ -22,37 +33,23 @@
             height: auto;
         }
 
-        .product-info {
-            padding: 20px;
-            background-color: #f8f8f8;
-            margin-top: 20px;
-            border-radius: 5px;
-        }
-
         .product-title {
-            font-size: 24px;
+            font-size: 18px;
             font-weight: bold;
-            margin-bottom: 10px;
+            margin: 10px 0;
         }
 
         .product-price {
-            font-size: 20px;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        .product-description {
             font-size: 16px;
-            line-height: 1.5;
-            color: #666;
-            margin-bottom: 20px;
+            color: #333;
+            margin-bottom: 10px;
         }
 
         .add-to-cart {
             background-color: #007BFF;
             color: #FFF;
-            padding: 10px 20px;
-            font-size: 18px;
+            padding: 8px 16px;
+            font-size: 14px;
             text-decoration: none;
             border-radius: 5px;
         }
@@ -66,16 +63,35 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://img.seoul.co.kr/img/upload/2022/01/12/SSI_20220112170537_O2.jpg" alt="상품 이미지" class="product-image">
-        <div class="product-info">
-            <h2 class="product-title">상품 이름</h2>
-            <p class="product-price">₩ 가격</p>
-            <p class="product-description">
-                상품에 대한 설명을 여기에 입력하세요. 이 상품은 높은 품질의 소재로 제작되었으며,
-                사용자의 편의성과 성능을 최적화하기 위해 디자인되었습니다.
-            </p>
+        <!-- 상품 카드 1 -->
+        <div class="product-card">
+            <img src="상품이미지URL1" alt="상품 이미지" class="product-image">
+            <h3 class="product-title">상품 이름 1</h3>
+            <p class="product-price">₩ 가격 1</p>
+            <a href="#" class="add-to-cart">장바구니에 담기</a>
+        </div>
+        <!-- 상품 카드 2 -->
+        <div class="product-card">
+            <img src="상품이미지URL2" alt="상품 이미지" class="product-image">
+            <h3 class="product-title">상품 이름 2</h3>
+            <p class="product-price">₩ 가격 2</p>
+            <a href="#" class="add-to-cart">장바구니에 담기</a>
+        </div>
+        <!-- 상품 카드 3 -->
+        <div class="product-card">
+            <img src="상품이미지URL3" alt="상품 이미지" class="product-image">
+            <h3 class="product-title">상품 이름 3</h3>
+            <p class="product-price">₩ 가격 3</p>
+            <a href="#" class="add-to-cart">장바구니에 담기</a>
+        </div>
+                <!-- 상품 카드 4 -->
+        <div class="product-card">
+            <img src="상품이미지URL4" alt="상품 이미지" class="product-image">
+            <h3 class="product-title">상품 이름 4</h3>
+            <p class="product-price">₩ 가격 4</p>
             <a href="#" class="add-to-cart">장바구니에 담기</a>
         </div>
     </div>
 </body>
 </html>
+
