--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
     <div class="container">
         <!-- 상품 카드 1 -->
         <div class="product-card">
-            <img src="상품이미지URL1" alt="상품 이미지" class="product-image">
+            <img src="https://img.seoul.co.kr/img/upload/2022/01/12/SSI_20220112170537_O2.jpg" alt="상품 이미지" class="product-image">
             <h3 class="product-title">상품 이름 1</h3>
             <p class="product-price">₩ 가격 1</p>
             <a href="#" class="add-to-cart">장바구니에 담기</a>
         </div>
         <!-- 상품 카드 2 -->
         <div class="product-card">
-            <img src="상품이미지URL2" alt="상품 이미지" class="product-image">
+            <img src="https://img.seoul.co.kr/img/upload/2022/01/12/SSI_20220112170537_O2.jpg" alt="상품 이미지" class="product-image">
             <h3 class="product-title">상품 이름 2</h3>
             <p class="product-price">₩ 가격 2</p>
             <a href="#" class="add-to-cart">장바구니에 담기</a>
         </div>
         <!-- 상품 카드 3 -->
         <div class="product-card">
-            <img src="상품이미지URL3" alt="상품 이미지" class="product-image">
+            <img src="https://img.seoul.co.kr/img/upload/2022/01/12/SSI_20220112170537_O2.jpg" alt="상품 이미지" class="product-image">
             <h3 class="product-title">상품 이름 3</h3>
             <p class="product-price">₩ 가격 3</p>
             <a href="#" class="add-to-cart">장바구니에 담기</a>
         </div>
                 <!-- 상품 카드 4 -->
         <div class="product-card">
-            <img src="상품이미지URL4" alt="상품 이미지" class="product-image">
+            <img src="https://img.seoul.co.kr/img/upload/2022/01/12/SSI_20220112170537_O2.jpg" alt="상품 이미지" class="product-image">
             <h3 class="product-title">상품 이름 4</h3>
             <p class="product-price">₩ 가격 4</p>
             <a href="#" class="add-to-cart">장바구니에 담기</a>
